# magic-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
python/magic_rs/: __init__.py  _magic_rs.pyi
src/: lib.rs
testdata/: sample.html  sample.xml  sample2.xml
tests/: test_app.py  test_archive.py  test_audio.py  test_book.py  test_doc.py  test_error.py  test_font.py  test_image.py  test_odf.py  test_text.py  test_video.py
tests/benchmarks/: README.md  benchmark.py
